
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int p; int d; } ;
typedef TYPE_1__ e ;


 int l (int ,int,int ) ;
 int l176 (int ,unsigned char,unsigned char) ;

__attribute__((used)) static void l106(e*a,unsigned char z,unsigned char r){
unsigned char l27=16<<a->p;l(a->d,40,0);l176(a->d,(z<<1)|0,l27);l176(
a->d,r,l27);l(a->d,40,0);}
